<resources>
    <string name="app_name">SmartMuseum</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--StartPage-->
    <string name="startpage_order_tv">立即预约</string>
    <string name="startpage_one_recommend_tv">个性展览推荐</string>
    <string name="startpage_one_details_tv">“回归之路”特展</string>
    <string name="startpage_one_index_tv">展览推荐</string>

    <string name="startpage_two_recommend_tv">今日文创推荐</string>
    <string name="startpage_two_details_tv">海晏河清加湿器</string>
    <string name="startpage_two_index_tv">文创推荐</string>

    <string name="startpage_three_recommend_tv">展品推荐</string>
    <string name="startpage_three_details_tv">清康熙豇豆红太白尊</string>
    <string name="startpage_three_index_tv">展品推荐</string>

    <!--Login-->
    <string name="login_to_register_tv">注册</string>
    <string name="login_welcome_tv">欢迎来到\n中国国家博物馆</string>
    <string name="login_lable_tv">登录</string>
    <string name="login_account_telephone_et_hint">电话号码</string>
    <string name="login_password_et_hint">密码</string>
    <string name="login_to_forgetpwd_tv">忘记密码？</string>
    <string name="login_btn">登录</string>

    <!--Register-->
    <string name="register_to_login_tv">登录</string>
    <string name="register_welcome_tv">欢迎来到\n中国国家博物馆</string>
    <string name="register_lable_tv">注册</string>
    <string name="register_account_telephone_et_hint">电话号码</string>
    <string name="register_password_et_hint">密码</string>
    <string name="register_assure_pwd_et_hint">确认密码</string>
    <string name="register_btn">注册</string>

    <string name="register_next_step_tv">下一步</string>
    <string name="register_hint_one_tv">注册</string>
    <string name="register_step_one_count_tv">第1/3步</string>
    <string name="register_personal_info_tv">个人信息</string>
    <string name="register_nickname_tv">用户名</string>
    <string name="register_name_tv">姓名</string>
    <string name="register_gender_tv">性别</string>
    <string name="register_gender_selected_hint_tv_male">男</string>
    <string name="register_gender_selected_hint_tv_female">女</string>

    <string name="register_hint_two_tv">注册</string>
    <string name="register_step_two_count_tv">第2/3步</string>
    <string name="register_position_permissions_tv">位置信息权限</string>
    <string name="register_choose_permissions_tv">请选择允许开通的位置权限</string>
    <string name="register_permission_navigation_checkbox">&#160;&#160;&#160;导览</string>
    <string name="register_permission_goods_delivery_checkbox">&#160;&#160;&#160;文创配送</string>
    <string name="register_permission_safe_run_checkbox">&#160;&#160;&#160;急救逃生</string>

    <string name="register_hint_three_tv">注册</string>
    <string name="register_step_three_count_tv">第3/3步</string>
    <string name="register_input_telephone_tv">输入您的手机号以确认</string>
    <string name="register_telephone_tv">电话号码</string>
    <string name="register_area_code_tv">+86</string>

    <string name="register_assure_telephone_hint_tv">我们已经向您的手机号 +86 %s 发送了验证码。请您在下方填写验证码以确认手机号。</string>
    <string name="register_assure_telephone_send_hint_tv">我们准备向您的手机号 +86 %s 发送验证码。</string>
    <string name="reigster_assure_telephone_chronometer_tv">33秒</string>
    <string name="register_assure_telephone_time_hint_tv">后可重新发送验证码</string>
    <string name="register_assure_telephone_resend_tv">重新发送</string>
    <string name="register_assure_telephone_send_tv">发送验证码</string>

    <!--ForgetPwd-->
    <string name="forgetpwd_lable_tv">忘记密码</string>
    <string name="forgetpwd_new_password_tv">新密码</string>
    <string name="forgetpwd_assure_pwd_tv">确认密码</string>
    <string name="forgetpwd_change_pwd_btn">更改密码</string>

    <!-- Friend !-->
    <string name="friend_my_firends">我的伙伴</string>
    <string name="friend_my_friends_team_join">火热参与</string>
    <string name="friend_my_firends_team">讲解团队</string>
    <string name="friend_my_firends_start">立即开始</string>
    <string name="friend_my_firends_team_hint">共享位置信息，及时跟上团体；自由参观后再次集合位置灵活</string>
    <string name="friend_my_firends_personal_join">灵活参与</string>
    <string name="friend_my_firends_personal">个人伙伴</string>
    <string name="friend_my_firends_personal_hint">自定义团体成员，不用担心失散迷路等问题</string>
    <string name="friend_choose_friend">添加个人伙伴</string>
    <string name="friend_choose_friend_search">搜索</string>
    <string name="friend_choose_friend_my_accompany">已添加%d位同行伙伴</string>
    <string name="firend_choose_friend_item_accompany_count">曾同行过%d次</string>
    <string name="friend_choose_friend_item_inMuseum">国家博物馆参观中</string>
    <string name="friend_choose_friend_item_not_inMuseum">离线</string>
    <string name="friend_choose_friend_item_button">添加</string>
    <string name="friend_choose_friend_item_button_already">已添加</string>
    <string name="friend_choose_friend_start_button">立即开始</string>

    <!-- Goods !-->
    <string name="mainpage_goods_price_sign">¥</string>
    <string name="mainpage_goods_commend_now_location_show">您现在的位置是</string>
    <string name="mainpage_goods_commend_now_location">北1展厅</string>
    <string name="mainpage_goods_commend_buypeople_num">%d人曾购买</string>
    <string name="mainpage_goods_commend_distribution">定位配送</string>
    <string name="mainpage_goods_purchased_num_sign">x</string>

    <string name="mainpage_goods_dicount_num_sign">-</string>
    <string name="mainpage_goods_dicount_num_sign_2">%</string>
    <string name="mainpage_goods_dicount_champion">本周销量最佳</string>
    <string name="mainpage_goods_dicount_remainder_num">库存%d件</string>

    <string name="mainpage_goods_market_loacation">复兴之路参观中</string>
    <string name="mainpage_goods_market_classical">经典展览文创产品</string>
    <string name="mainpage_goods_market_discount">限量热销</string>
    <string name="mainpage_goods_market_signin">你的打卡</string>
    <string name="mainpage_goods_market_notification">6</string>

    <string name="goods_info_select_type">选择型号</string>
    <string name="goods_info_add_cart">加入购物车</string>

    <string name="goods_info_detail_goods_selcet_type">选择型号</string>
    <string name="goods_info_detail_goods_selcet_number">选择数量</string>
    <string name="goods_info_detail_goods_watch_detail">查看详情</string>
    <string name="goods_info_detail_goods_buy">立即购买</string>
    <string name="goods_info_detail_nobox">无礼盒</string>
    <string name="goods_info_detail_box">有礼盒</string>

    <string name="goods_order_check_change_order">变更订单</string>
    <string name="goods_order_check_order_sum">订单结算</string>

    <string name="goods_order_check_goods_price">商品费</string>
    <string name="goods_order_check_pack_price">包装费</string>
    <string name="goods_order_check_deliver_price">配送费</string>
    <string name="goods_order_check_sum_price">总计</string>
    <string name="goods_order_check_pay">立即付款</string>
    <string name="goods_order_check_total_pay">统计价格</string>

    <string name="goods_choose_address_add_newaddress">添加新地址</string>
    <string name="goods_choose_address_choose_address">选择地址</string>
    <string name="goods_choose_address_choose_next">下一步</string>
    <string name="goods_choose_address_card_default_address">默认地址</string>

    <string name="goods_pay_type_text">付款方式</string>
    <string name="goods_pay_type_alipay_text">支付宝</string>
    <string name="goods_pay_type_wechatpay_text">微信支付</string>
    <string name="goods_pay_type_creditcardpay_text">信用卡</string>
    <string name="goods_pay_type_moneypay_text">现金</string>

    <string name="dialog_goods_info_pay_success_success_text">购买成功！</string>
    <string name="dialog_goods_info_pay_success_tips_text">凭此二维码自助取货或\n查收配送文创商品！</string>
    <string name="dialog_goods_info_pay_success_buy_text">继续购买</string>

    <string name="goods_order_delivery_edit_order">变更订单</string>
    <string name="goods_order_delivery_myself_order">自取订单</string>

    <string name="goods_order_status_text">订单状态</string>

    <string name="goods_order_status_pay">下单</string>
    <string name="goods_order_status_confirm">确认</string>
    <string name="goods_order_status_pack">包裹打包</string>
    <string name="goods_order_status_delivery">包裹配送</string>
    <string name="goods_order_status_getpack">收到包裹</string>


    <!-- RouteCommend !-->
    <string name="route_commend_info_title">文物特展</string>
    <string name="route_commend_info_start_location_text">初始位置</string>
    <string name="route_commend_info_end_location_text">出口</string>

    <string name="dialog_route_commend_goods_other_text">查看其他推荐文创商品</string>
    <string name="dialog_route_commend_goods_detail_text">查看详情</string>
    <string name="dialog_route_commend_goods_commend_detail_text1">根据您参观过的</string>
    <string name="dialog_route_commend_goods_commend_detail_text2">推荐</string>

    <string name="route_commend_popupwindow_goods_pack_title">文创包裹</string>
    <string name="route_commend_popupwindow_goods_pack_nothing">暂无内容</string>
    <string name="route_commend_popupwindow_goods_commend_title">推荐加入</string>
    <string name="route_commend_popupwindow_goods_add_goods_title">添加到包裹</string>
    <string name="route_commend_popupwindow_goods_detail_title">查看包裹详情</string>


    <string name="explore_text">探索</string>
    <string name="exhibition_text">展览</string>
    <string name="activity_text">活动</string>
    <string name="recomendedroute_text">推荐路线</string>
    <string name="bookvisit_text">预约参观</string>

    <string name="family_activity_text">家庭活动</string>
    <string name="family_activity">公益活动</string>
    <string name="charitiable_number">5项相关计划</string>
    <string name="family_activity_number">22项相关计划</string>
    <string name="text_you_current_location">你现在的位置是</string>
    <string name="beiyizhanting">北一展厅</string>
    <string name="nearby_text">附近</string>
    <string name="return_road_detail_rolling">回归之路-详细-滚动</string>
    <string name="background1">white1</string>
    <string name="friend_choose_friends">添加个人伙伴</string>
    <string name="friend_choose_friends_search">搜索</string>
    <string name="friend_choose_friends_my_accompany">已添加%d位同行伙伴</string>
    <string name="firend_choose_friends_item_accompany_count">曾同行过%d次</string>
    <string name="friend_choose_friends_item_inMuseum">国家博物馆参观中</string>
    <string name="friend_choose_friends_item_not_inMuseum">离线</string>
    <string name="friend_choose_friends_item_button">添加</string>
    <string name="friend_choose_friends_item_button_already">已添加</string>
    <string name="friend_choose_friends_start_button">立即开始</string>
    <string name="backButton">goback</string>

    <!--Exhibition-->
    <string name="exhibition_inner_collection_lable_tv">导览</string>
    <string name="exhibition_inner_collection_position_hint_tv">您现在的位置是</string>
    <string name="exhibition_inner_collection_concrete_position_tv">北一展厅-复兴之路</string>
    <string name="exhibition_inner_collection_change_hint_tv">缩放</string>

    <!--Settings-->
    <string name="settings_lable_tv">设置</string>
    <string name="settings_user_info_tv">用户信息</string>
    <string name="settings_personal_account_tv">个人账户</string>
    <string name="settings_notify_tv">通知</string>
    <string name="settings_recommend_tv">个性推荐</string>
    <string name="settings_application_setting_tv">软件设置</string>
    <string name="settings_language_tv">语言</string>
    <string name="settings_setted_language_tv">简体中文</string>
    <string name="settings_contact_us_tv">联系我们</string>
    <string name="settings_logout_btn">退出登录</string>

    <!--MainPage-Drawer-->
    <string name="mainpage_drawer_username_tv">葫芦</string>
    <string name="mainpage_drawer_user_status_tv">和伙伴参观中</string>
    <string name="mainpage_drawer_my_position_tv">我的位置</string>
    <string name="mainpage_drawer_friends_position_tv_1">伙伴位置1</string>
    <string name="mainpage_drawer_friends_position_tv_2">伙伴位置2</string>
    <string name="mainpage_drawer_friends_position_tv_3">伙伴位置3</string>
    <string name="mainpage_drawer_send_message_btn">发送消息</string>
    <string name="mainpage_drawer_exit_btn">退出</string>
</resources>