<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/SearchButton"
            android:layout_width="38dp"
            android:layout_height="52dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/mainpage_search" />

        <TextView
            android:id="@+id/ExplorerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/explore_text"
            android:textColor="#111111"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="240dp"
            android:text="@string/nearby_text"
            android:textColor="#111111"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recommendedroute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            app:layout_constraintStart_toEndOf="@+id/activity"
            app:layout_constraintTop_toBottomOf="@+id/ExplorerTextView"
            app:srcCompat="@mipmap/recommendedroute_selected" />

        <ImageButton
            android:id="@+id/exhibition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ExplorerTextView"
            app:srcCompat="@mipmap/exhibition_not_selected" />

        <TextView
            android:id="@+id/exhibition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/exhibition_text"
            app:layout_constraintEnd_toEndOf="@+id/exhibition"
            app:layout_constraintStart_toStartOf="@+id/exhibition"
            app:layout_constraintTop_toBottomOf="@+id/exhibition" />

        <TextView
            android:id="@+id/activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/activity_text"
            android:textColor="@color/mainpage_navigation_selectoritem_primary_color_unselected"
            app:layout_constraintEnd_toEndOf="@+id/activity"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/activity"
            app:layout_constraintTop_toBottomOf="@+id/activity" />

        <TextView
            android:id="@+id/recomendedroute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/recomendedroute_text"
            android:textColor="@color/friend_choose_friends_item_normal_button"
            app:layout_constraintEnd_toEndOf="@+id/recommendedroute"
            app:layout_constraintStart_toStartOf="@+id/recommendedroute"
            app:layout_constraintTop_toBottomOf="@+id/recommendedroute" />

        <ImageButton
            android:id="@+id/bookvisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            app:layout_constraintStart_toEndOf="@+id/recommendedroute"
            app:layout_constraintTop_toBottomOf="@+id/ExplorerTextView"
            app:srcCompat="@mipmap/mainpage_bookvisit_not_selected" />

        <TextView
            android:id="@+id/bookvisit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/bookvisit_text"
            app:layout_constraintEnd_toEndOf="@+id/bookvisit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bookvisit"
            app:layout_constraintTop_toBottomOf="@+id/bookvisit" />

        <ImageButton
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            app:layout_constraintStart_toEndOf="@+id/exhibition"
            app:layout_constraintTop_toBottomOf="@+id/ExplorerTextView"
            app:srcCompat="@mipmap/mainpage_activity_not_selected" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exhibition_text"
            app:srcCompat="@mipmap/mainpage_navigation_icon" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_you_current_location"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/current_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/beiyizhanting"
            android:textColor="#842d29"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/collection_exhibition_route_image" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/classical_route_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>