<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".view.register.RegisterStepThreeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.29" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <ImageView
            android:id="@+id/register_back_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:clickable="true"
            android:src="@mipmap/register_back"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <TextView
            android:id="@+id/register_next_step_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_next_step_tv"
            android:textColor="@color/register_next_step_tv"
            android:textSize="@dimen/register_next_step_tv"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline30"
            tools:text="下一步" />

        <TextView
            android:id="@+id/register_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_hint_two_tv"
            android:textColor="@color/register_hint_tv"
            android:textSize="@dimen/register_hint_tv"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline29"
            tools:text="注册" />

        <TextView
            android:id="@+id/register_step_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_step_two_count_tv"
            android:textColor="@color/register_step_count_tv"
            android:textSize="@dimen/register_step_count_tv"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline29"
            tools:text="第2/3步" />

        <View
            android:id="@+id/view13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F8F8F8"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline32" />

        <TextView
            android:id="@+id/register_position_permissions_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_position_permissions_tv"
            android:textColor="@color/register_position_permissions_tv"
            android:textSize="@dimen/register_position_permissions_tv"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline32"
            tools:text="位置信息权限" />

        <TextView
            android:id="@+id/register_choose_permissions_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_choose_permissions_tv"
            android:textColor="@color/register_choose_permissions_tv"
            android:textSize="@dimen/register_choose_permissions_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toTopOf="@+id/guideline33"
            app:layout_constraintVertical_bias="0.05"
            tools:text="请选择允许开通的位置权限" />

        <ImageView
            android:id="@+id/register_position_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/register_position"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/register_permission_navigation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/register_permission_selector"
            android:text="@string/register_permission_navigation_checkbox"
            android:textColor="@color/register_permission_checkbox"
            android:textSize="@dimen/register_permission_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/register_permission_goods_delivery_checkbox"
            app:layout_constraintStart_toStartOf="@+id/register_permission_goods_delivery_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/register_choose_permissions_tv" />

        <CheckBox
            android:id="@+id/register_permission_goods_delivery_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/register_permission_selector"
            android:text="@string/register_permission_goods_delivery_checkbox"
            android:textColor="@color/register_permission_checkbox"
            android:textSize="@dimen/register_permission_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/register_permission_safe_run_checkbox"
            app:layout_constraintStart_toStartOf="@+id/register_permission_safe_run_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/register_permission_navigation_checkbox" />

        <CheckBox
            android:id="@+id/register_permission_safe_run_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:button="@drawable/register_permission_selector"
            android:text="@string/register_permission_safe_run_checkbox"
            android:textColor="@color/register_permission_checkbox"
            android:textSize="@dimen/register_permission_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/guideline40"
            app:layout_constraintStart_toStartOf="@+id/guideline24"
            app:layout_constraintTop_toBottomOf="@+id/register_permission_goods_delivery_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>